[gd_scene load_steps=21 format=3 uid="uid://dg8ie22gykgq7"]

[ext_resource type="Script" path="res://script/player_test.gd" id="1_kupnk"]
[ext_resource type="Texture2D" uid="uid://csv57towpgxpb" path="res://art/characters/player.png" id="2_54qsg"]
[ext_resource type="Texture2D" uid="uid://55a4wj58j2r4" path="res://art/png/png/Keys.Highlighted.png" id="3_c3b6y"]
[ext_resource type="PackedScene" uid="uid://d2wmhvljuw4lf" path="res://scenes/MovementComponent.tscn" id="3_k2atb"]
[ext_resource type="Texture2D" uid="uid://bl2oxycwm3h2v" path="res://art/png/png/Keys.png" id="4_fsshd"]
[ext_resource type="PackedScene" uid="uid://bvlvymqb4wwxw" path="res://scenes/statComponent.tscn" id="4_kb1t5"]
[ext_resource type="PackedScene" uid="uid://drbngmsfal1dr" path="res://scenes/HealthComponent.tscn" id="4_p8hbf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_017rb"]
radius = 3.0

[sub_resource type="Animation" id="Animation_ooum8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Key:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_fsshd"), ExtResource("3_c3b6y")]
}

[sub_resource type="Animation" id="Animation_shnag"]
resource_name = "back_attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_opqbf"]
resource_name = "back_idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_a5jdd"]
resource_name = "back_walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_76som"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="Animation_kd0vv"]
resource_name = "front_attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_ebx88"]
resource_name = "front_idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_uuha4"]
resource_name = "front_walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_60orp"]
resource_name = "side_attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_k7dx6"]
resource_name = "side_idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_a1ver"]
resource_name = "side_walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nicrv"]
_data = {
"RESET": SubResource("Animation_ooum8"),
"back_attack": SubResource("Animation_shnag"),
"back_idle": SubResource("Animation_opqbf"),
"back_walk": SubResource("Animation_a5jdd"),
"death": SubResource("Animation_76som"),
"front_attack": SubResource("Animation_kd0vv"),
"front_idle": SubResource("Animation_ebx88"),
"front_walk": SubResource("Animation_uuha4"),
"side_attack": SubResource("Animation_60orp"),
"side_idle": SubResource("Animation_k7dx6"),
"side_walk": SubResource("Animation_a1ver")
}

[node name="player_test" type="CharacterBody2D" node_paths=PackedStringArray("anim", "sprite", "healthComponent", "moveComponent", "statComponent")]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_kupnk")
anim = NodePath("AnimationPlayer")
sprite = NodePath("Sprite2D")
healthComponent = NodePath("HealthComponent")
moveComponent = NodePath("MovementComponent")
statComponent = NodePath("StatComponent")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_017rb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -4)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="MovementComponent" parent="." node_paths=PackedStringArray("parent", "ray") instance=ExtResource("3_k2atb")]
parent = NodePath("..")
ray = NodePath("../RayCast2D")

[node name="StatComponent" parent="." instance=ExtResource("4_kb1t5")]

[node name="HealthComponent" parent="." instance=ExtResource("4_p8hbf")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_54qsg")
hframes = 6
vframes = 10
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nicrv")
}
autoplay = "front_idle"

[node name="Key" type="Sprite2D" parent="."]
position = Vector2(0, -34)
texture = ExtResource("4_fsshd")
hframes = 5
vframes = 8
frame = 4

[connection signal="failed_action" from="." to="." method="_on_failed_action"]
[connection signal="turn_end" from="." to="." method="_on_end_turn"]
[connection signal="move_end" from="MovementComponent" to="." method="play_idle_anim"]
[connection signal="move_start" from="MovementComponent" to="." method="play_movement_anim"]
[connection signal="death" from="HealthComponent" to="." method="_on_player_death"]
[connection signal="resurrection" from="HealthComponent" to="." method="_on_resurrection"]
